# biohackathon2025

./: .gitignore  README.md  conda-lock.yml  docker-compose.yml  environment.yml  install.ps1  install_and_run_tests.ps1  pyproject.toml
data/: README.md
models/: README.md
notebooks/: 151019_adult_bc_datasets_preparation.ipynb  query_examples.ipynb  read-text-embeddings-from-db.ipynb  read-text-embeddings.ipynb  read-text-embeddingscopy.ipynb  text-embeddings-from-db.ipynb
scGPT/: Readme.md  Tutorial_Reference_Mapping_dataset.ipynb  Tutorial_Reference_Mapping_dataset_joint.ipynb  pyproject.toml  read-embeddings-example.ipynb
scripts/: generate_vector_database.py
scripts/vectors.chromadb/: chroma.sqlite3  chroma.sqlite3-journal
src/: SEARCH_Cell_ontology_immune_cells_using_OLS_manual_map.py  SEARCH_MESH_immune_cells_multiple_terms_incl_synonyms.py  download_europepmc.py  extract_article_names.sh  preliminary_filtering.py  run_all.py  update_body_from_xml.py
src/bloodtextdata/: add_datasets_to_database.py
src/bloodtextdata/funcs/: create_jsons.py  dataset_metadatas.py  load_datasets.py
src/celltype_mappings/: cell_ontology_immune_cells_with_synonyms.json  mesh_immune_cells_with_synonyms.json
src/chatbot/backend/: Dockerfile  app.py  biobert_embeddings.py  chat_api.py  models.py  requirements.txt  settings.py
src/chatbot/frontend/: Dockerfile  package.json  vite.config.js
src/chatbot/frontend/src/: App.tsx  Chat.tsx
src/embeddings/: __init__.py  embeddings.py
src/hpa_embeddings/: add_datasets_to_database.py  create_chopped_up_dataset_embeddings.py  load_datasets.py
src/hpa_embeddings/funcs/: create_jsons.py  insert_into_db.py  load_datasets.py
src/hpa_embeddings/unused/: flattened_scpgpt_script.py  utils.py
src/mcp_server/: MIGRATION_GUIDE.md  QUICKSTART.md  SUMMARY.md  chromadb_mcp_server.py  claude_desktop_config.example.json  detect_version.py  export_chromadb_old.py  import_chromadb_new.py  load_sample_data.py  pyproject.toml  requirements.txt
src/mcp_server/export_env/: pyvenv.cfg
src/vectordb/: __init__.py  vectordb.py
tests/: README.md
