[tool.poetry]
name = "scgpt-embedings-env"
version = "0.1.0"
description = "scGPT environment for reference mapping"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.26.4,<3.0"
ipykernel = "^6.29.0"
Deprecated = "1.2.18"
Jinja2 = "3.1.6"
MarkupSafe = "3.0.3"
PyYAML = "6.0.3"
absl-py = "2.3.1"
aiofiles = "25.1.0"
aiohappyeyeballs = "2.6.1"
aiohttp = "3.13.1"
aiosignal = "1.4.0"
anndata = "0.11.4"
array-api-compat = "1.12.0"
async-timeout = "5.0.1"
attrs = "25.4.0"
cached-property = "2.0.1"
cell-gears = "0.0.2"
certifi = "2025.10.5"
charset-normalizer = "3.4.4"
chex = "0.1.90"
contourpy = "1.3.2"
cycler = "0.12.1"
datasets = "2.21.0"
dcor = "0.6"
dill = "0.3.8"
docrep = "0.3.2"
et_xmlfile = "2.0.0"
etils = "1.13.0"
filelock = "3.20.0"
flax = "0.10.7"
fonttools = "4.60.1"
frozenlist = "1.8.0"
fsspec = "2024.6.1"
h5py = "3.15.1"
hf-xet = "1.1.10"
hnswlib = "0.8.0"
huggingface-hub = "0.35.3"
humanize = "4.14.0"
idna = "3.11"
igraph = "0.11.9"
importlib_resources = "6.5.2"
jax = "0.6.2"
jaxlib = "0.6.2"
joblib = "1.5.2"
kiwisolver = "1.4.9"
legacy-api-wrap = "1.4.1"
leidenalg = "0.10.2"
lightning-utilities = "0.15.2"
llvmlite = "0.45.1"
markdown-it-py = "4.0.0"
matplotlib = "3.10.7"
mdurl = "0.1.2"
ml_collections = "1.1.0"
ml_dtypes = "0.5.3"
mpmath = "1.3.0"
msgpack = "1.1.2"
mudata = "0.3.2"
multidict = "6.7.0"
multipledispatch = "1.0.0"
multiprocess = "0.70.16"
natsort = "8.4.0"
networkx = "3.4.2"
numba = "0.62.1"
numpyro = "0.19.0"
openpyxl = "3.1.5"
opt_einsum = "3.4.0"
optax = "0.2.6"
orbax = "0.1.7"
orbax-checkpoint = "0.11.25"
pandas = "2.3.3"
patsy = "1.0.2"
pillow = "12.0.0"
propcache = "0.4.1"
protobuf = "6.33.0"
pyarrow = "21.0.0"
pydot = "4.0.1"
pynndescent = "0.5.13"
pyparsing = "3.2.5"
pyro-api = "0.1.2"
pyro-ppl = "1.9.1"
pytorch-lightning = "1.9.5"
pytz = "2025.2"
requests = "2.32.5"
rich = "14.2.0"
scanpy = "1.11.5"
scgpt = "0.2.4"
scib = "1.1.7"
scikit-learn = "1.7.2"
scikit-misc = "0.5.1"
scipy = "1.15.3"
scvi-tools = "0.20.3"
seaborn = "0.13.2"
session-info2 = "0.2.3"
simplejson = "3.20.2"
statsmodels = "0.14.5"
sympy = "1.13.1"
tensorstore = "0.1.78"
texttable = "1.7.0"
threadpoolctl = "3.6.0"
toolz = "1.1.0"
torch = "2.2.0"
torchdata = "0.7.1"
torchmetrics = "1.8.2"
torchtext = "0.17.0"
tqdm = "4.67.1"
treescope = "0.1.10"
tzdata = "2025.2"
umap-learn = "0.5.9.post2"
urllib3 = "2.5.0"
wrapt = "1.17.3"
xxhash = "3.6.0"
yarl = "1.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"