[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chromadb-mcp-server"
version = "0.1.0"
description = "MCP server for ChromaDB vector database"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "chromadb>=0.4.0",
]

[project.scripts]
chromadb-mcp-server = "chromadb_mcp_server:main"
